tests/should_fail/ghost/non_terminating.stderr
error: `ghost!` blocks must not contain loops without variants.
  --> non_terminating.rs:20:9
   |
20 |         loop {}
   |         -^^^^^^
   |         |
   |         help: add a variant here: `#[variant(...)]`

error: Mutually recursive functions: when calling `f`...
  --> non_terminating.rs:13:1
   |
13 | fn f() {
   | ^^^^^^
   |
note: then `f` calls `recursive`...
  --> non_terminating.rs:14:5
   |
14 |     recursive();
   |     ^^^^^^^^^^^
note: finally `recursive` calls `f`.
  --> non_terminating.rs:7:9
   |
 7 |         f();
   |         ^^^

error: aborting due to 2 previous errors

